<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_contact">

    <TextView
        android:id="@+id/textAddPhoneNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_phone_number"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAddPhoneNum"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editContactName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/jason"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textAddPhoneNum" />

    <TextView
        android:id="@+id/textContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textName"
        app:layout_constraintTop_toBottomOf="@+id/textName"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/editContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/_0129897264"
        android:inputType="phone"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textContactNumber"
        app:layout_constraintTop_toBottomOf="@+id/editContactName" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginBottom="392dp"
        android:background="#317C33"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>