<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="132dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sos" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/login"
        android:textSize="48sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="44dp"
        android:background="@color/gray"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="20sp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/enterEmail"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="44dp"
        android:background="@color/navyBlue"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <Button
        android:id="@+id/buttonGoSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/navyBlue"
        android:text="@string/not_a_user_sign_up"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <CheckBox
        android:id="@+id/checkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_login"
        app:layout_constraintStart_toStartOf="@+id/enterPassword"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

</android.support.constraint.ConstraintLayout>