<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@drawable/top_navigation_selector"
        app:itemTextColor="@drawable/top_navigation_selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_nav_menu">

    </android.support.design.widget.BottomNavigationView>

    <TextView
        android:id="@+id/sosmesssgedec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/SMS_title"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_view_top"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="SOS"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/SOS_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sosmesssgedec"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName|text|textEmailAddress"
        android:text="Please help ME!" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/SOS_Message"
        android:layout_marginTop="9dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/title_rescue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Rescue"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fire_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_rescue"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/fireServe_Number_require"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/fire_phone_number"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/fire_des"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:text="777" />


    <TextView
        android:id="@+id/police_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fire_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/Police_Number_require"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/police_phone_number"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/police_des"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:text="999" />


    <TextView
        android:id="@+id/ambulance_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/police_phone_number"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/ambulanceNumberRequire"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ambulance_phone_number"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ambulance_des"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="number"
        android:text="999" />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/ambulance_phone_number"
        android:layout_marginTop="9dp"
        android:background="@color/black" />
    <TextView
        android:id="@+id/title_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="When HELP button triggers"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/check_play_siren"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="0dp"
        android:background="@color/red"
        android:text="Logout"
        android:textColor="@color/White" />

    <CheckBox
        android:id="@+id/check_send_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_help"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/Des_send_location" />

    <CheckBox
        android:id="@+id/check_play_siren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_send_location"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/play_siren" />


</RelativeLayout>
    </ScrollView>