<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="250dp"
android:background="#ffffff"
    android:layout_gravity="center"

    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/alert_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popupMessage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/alert_message_ambulance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/view"
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_image_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_image_call"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:layout_marginBottom="12dp"

        android:contentDescription="@string/des_call"
        android:onClick="onCallButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_call_black_24dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_image_call"
        app:layout_constraintTop_toBottomOf="@+id/popupMessage"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/button_image_direction"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/des_direction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_pin_drop_black_24dp" />
</android.support.constraint.ConstraintLayout>